# graphify_GraphRAG

./: .gitignore  README.md  app.py  graph_builder.py  parse_3f_report.py  pyproject.toml
templates/: index.html
