[project]
name = "graphify-audit-rag"
version = "0.1.0"
description = "지식 그래프 기반의 감사 리포트 분석 및 AI 채팅 서비스"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.1.0",
    "networkx>=3.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
